--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>integer11 Documentation</title>
+  <title>integer11 docs</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Documentation supporting integer11 projects, software, APIs, and more...">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
