--- a/index.html
+++ b/index.html
@@ -2,15 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>integer11 docs</title>
+  <title>integereleven docs</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Documentation supporting integer11 projects, software, APIs, and more...">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <link rel="icon" href="/static/img/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/static/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/static/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/static/img/favicon-16x16.png">
+  <link rel="manifest" href="/static/img/site.webmanifest">
   <link rel="stylesheet" media="(prefers-color-scheme: dark)" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css">
   <style>
     :root {
-      --theme-color: #585ca4;
+      --mono-hue: 226;
+      --mono-saturation: 14%;
+      --mono-shade3     : hsl(var(--mono-hue), var(--mono-saturation), 0%);
+      --mono-shade2     : hsl(var(--mono-hue), var(--mono-saturation), 5%);
+      --mono-shade1     : hsl(var(--mono-hue), var(--mono-saturation), 10%);
+      --mono-base       : hsl(var(--mono-hue), var(--mono-saturation), 15%);
+      --mono-tint1      : hsl(var(--mono-hue), var(--mono-saturation), 20%);
+      --mono-tint2      : hsl(var(--mono-hue), var(--mono-saturation), 25%);
+      --mono-tint3      : hsl(var(--mono-hue), var(--mono-saturation), 30%);
+
+      --theme-hue: 195;
+      --theme-saturation: 85%;
+      --theme-lightness: 55%;
+      --theme-color: hsl(var(--theme-hue), var(--theme-saturation), var(--theme-lightness));
+
+      --link-color: #319FC4;
     }
   </style>
 </head>
@@ -19,8 +37,10 @@
   <script>
     window.$docsify = {
       loadNavbar: true,
-      logo: "/static/img/docs-i11n.svg",
-      name: 'integer11 docs',
+      logo: "/static/img/i11n-docs.svg",
+      coverpage: 'coverpage.md',
+      name: 'integereleven docs',
+      noCompileLinks: ['/ex2', '/kz', '/kz/.*']
     }
   </script>
   <script src="https://cdn.jsdelivr.net/npm/docsify@4"></script>
