fix: add 404 page

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       loadNavbar: true,
       logo: "/static/img/i11n-docs.svg",
       coverpage: 'coverpage.md',
+      notFoundPage: '_404.md',
       name: 'integereleven docs',
       noCompileLinks: ['/ex2', '/kz', '/kz/.*']
     }
