chore: branding update

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <script>
     window.$docsify = {
       loadNavbar: true,
-      logo: "/static/img/i11n-docs.svg",
+      logo: "/static/img/docs.svg",
       coverpage: 'coverpage.md',
       notFoundPage: '_404.md',
       name: 'integereleven docs',
