chore: migrate branding

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <script>
     window.$docsify = {
       loadNavbar: true,
-      logo: "/static/img/docs.svg",
+      logo: "https://docs.i11n.io/assets/img/logos/png/32/brand/text/filled.v1.png",
       coverpage: 'coverpage.md',
       notFoundPage: '_404.md',
       name: 'integereleven docs',
